
 - New method driver->getVendorInfo() to query information about the actual hardware driver.

 - Fixed somed CQuake3ShaderSceneNode problems.

 - Changed BurningsVideo internal Vertex Format. version changed to 0.39

 - SceneManager:
   Removed the seperate rendering states for quake3 Shader Scene Nodes.
   Nodes are now solid or transparent. ( but still more states are needed )

 - GUI:
   - Fixed a bug in CGUISpriteBank which caused a crash when a non-looping animated sprite reached the end of its animation.
   - Modal screens no longer flash invisible children when rejecting a focus change.
   - Finally added StarSonata patch with table element and TabControl additions. Table is based on MultiColor listbox by Acki, and has loads of changes by CuteAlien.

-------------------------------------------
Changes in version 1.4.1 (??? 2008)

 - Fixed the FollowSpline animator to avoid crashes when only one waypoint is given.

 - OpenGL VolumeShadow now uses glPolygonOffset to avoid zbuffer artifacts.

 - Fixed meshbuffer corruption in append methods.

 - Fixed mem leaks in irrArray.

 - Fixed minor bugs in ISceneNode and ISceneManager.

 - Fixed the MeshCache handling of GeometryCreator meshes.

 - Terrain LOD bugfix.

 - Some Collada 1.3 loader enhancements and bug fixes.

 - Fixed a bug in CGUISpriteBank which caused a crash when a non-looping animated sprite reached the end of its animation.

 - Enhanced the .obj loader with the patch from ryanclark. This allows for recalculation of smoothed normals of the mesh, also should decrease the tri count on some meshes.

 - Avoid the global Logger to be destroyed too early.

 - Function setbit was renamed to setbit_cond to avoid name clashes.

 - Fixed .x animations with multiple references to the same joint from different meshes.

 - Support for Milkshape 1.8 files, also with multiple weights per joint.
