@@ -9,6 +9,7 @@
 #ifdef _IRR_COMPILE_WITH_GUI_
 
 #include "IGUIComboBox.h"
+#include "IGUIStaticText.h"
 #include "irrString.h"
 #include "irrArray.h"
 
@@ -52,8 +53,8 @@ namespace gui
 		//! sets the selected item. Set this to -1 if no item should be selected
 		virtual void setSelected(s32 idx);
 
-		//! update the position
-		virtual void updateAbsolutePosition();
+		//! sets the text alignment of the text part
+		virtual void setTextAlignment(EGUI_ALIGNMENT horizontal, EGUI_ALIGNMENT vertical);
 
 		//! called if an event happened.
 		virtual bool OnEvent(const SEvent& event);
@@ -73,11 +74,13 @@ namespace gui
 		void sendSelectionChangedEvent();
 
 		IGUIButton* ListButton;
+		IGUIStaticText* SelectedText;
 		IGUIListBox* ListBox;
 		core::array< core::stringw > Items;
 		s32 Selected;
 		bool HasFocus;
 		IGUIElement *LastFocus;
+		EGUI_ALIGNMENT HAlign, VAlign;
 	};
 
 
